p2ws_package/Devpp2ws-Package/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Maintenance Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Void</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Thai Airway Case Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Acknowledge</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Customer Response</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Investigated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Open</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Waiting for Investigation</fullName>
        </values>
        <values>
            <fullName>Waiting for Response</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ARR_FLT_FROM__c</fullName>
        <description>Displays the Flight that is heading towards Suvarnabhumi Airport</description>
        <label>ARR FLT FROM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_Chapter_2_F__c</fullName>
        <description>Displays the first two letters from the ATA Chapter of the equipment</description>
        <formula>LEFT(  ATA_Chapter__c , 2)</formula>
        <label>ATA CH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_Chapter__c</fullName>
        <description>Displays the ATA Chapter of the equipment</description>
        <formula>EquipmentId__r.Depend_On_Object__r.Name</formula>
        <label>ATA DES.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA__c</fullName>
        <description>Displays the actual time for arrival for the Flight the Case is related to</description>
        <formula>Flightid__r.ATA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATD__c</fullName>
        <description>Displays the actual time for departure for the Flight the Case is related to</description>
        <formula>Flightid__r.ATD__c</formula>
        <label>ATD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_C_Main_Type__c</fullName>
        <description>Displays the user who has first handled the case</description>
        <formula>A_C_REG_ID__r.Aircraft_Main_Type__c</formula>
        <label>A/C Main Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_C_REG_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the Aircraft the Case is related to</description>
        <label>A/C REG</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>A_C_Reg_Search__c</fullName>
        <description>Displays the value of the Aircraft that the Case is related to in text format to allow field to be indexed for searching</description>
        <label>A/C Reg Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A_C_Type__c</fullName>
        <description>Displays the Aircraft Type that the Case is related to (via Aircraft)</description>
        <formula>A_C_REG_ID__r.Aircraft_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A/C Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Class__c</fullName>
        <description>Displays the value of the Passenger&apos;s Travel Class if available (post check-in)</description>
        <formula>if(Accepted_Class_txt__c != null,Accepted_Class_txt__c,IF(Passengerid__r.Cabin_Code__c != null,Passengerid__r.Cabin_Code__c,&quot;Unidentified&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Class_txt__c</fullName>
        <description>Displays the value of Passenger&apos;s Travel Class (post check-in)</description>
        <label>Accepted Class txt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Seat_Number__c</fullName>
        <description>Displays the value of Passenger&apos;s Seat Number if available (post check-in)</description>
        <formula>If(NOT(ISBLANK(Passengerid__r.Checkin_Seat__c)),Passengerid__r.Checkin_Seat__c,
IF(Passengerid__r.Booking_Seat__c != null,Passengerid__r.Booking_Seat__c,&quot;Unidentified&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted Seat Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Seat_txt__c</fullName>
        <description>Displays the value of Passenger&apos;s Seat Number (post check-in)</description>
        <label>Accepted Seat txt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Debited__c</fullName>
        <description>Displays the value of the Account Number the Cash Compensation is transferred to</description>
        <label>Account Debited</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acknowledge_First__c</fullName>
        <defaultValue>0</defaultValue>
        <label>First</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acknowledge_Platinum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Platinum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acknowledge_on_24_hrs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Acknowledge within 24 hrous identifier</description>
        <label>Acknowledge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_By__c</fullName>
        <label>Action By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>Displays the progress of the Case from Maintenance Crew Members</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Remain</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft_Registration_F__c</fullName>
        <description>Displays the Aircraft Registration value (via Aircraft)</description>
        <formula>Flightid__r.AircraftId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Registration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type_F__c</fullName>
        <description>Displays the Aircraft Type that the Case is related to (via Aircraft)</description>
        <formula>Flightid__r.AircraftId__r.Aircraft_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Cases__c</fullName>
        <description>Checks whether the Case is concerned with KPI report for DT</description>
        <formula>IF(
(ISPICKVAL( Action__c, &quot;Remain&quot; ) ||  ISPICKVAL( Action__c, &quot;Completed&quot; ))  &amp;&amp; (  TEXT( Status ) &lt;&gt; &quot;Void&quot; ) , TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Displays the Approval Status of Compensations on the Case (Approved, Rejected or Pending)</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Compensation__c</fullName>
        <label>Approved Compensation</label>
        <summaryFilterItems>
            <field>Compensation__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation__c.CaseId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Authorize_Number__c</fullName>
        <description>Displays the Authorization Number of the personnel who logged the Case</description>
        <label>AUTH NO.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signature_Current__c</fullName>
        <description>Displays the authorize signature that is to be used in templates and print screens (from bangkok or from abroad)</description>
        <formula>CASE(Owner:User.Station__c,
&quot;BKK&quot;, text(Authorize_Signature__c) ,
&quot;CNX&quot;, text(Authorize_Signature__c) ,
&quot;HKT&quot;, text(Authorize_Signature__c) ,
&quot;KBV&quot;, text(Authorize_Signature__c) ,
&quot;USM&quot;, text(Authorize_Signature__c) ,
 Authorize_Signature_Text__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorize Signature Current</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signature_Text__c</fullName>
        <description>A text field that is used to input signatures from abroad personnels that are to be displayed at the end of emails and on print screens</description>
        <label>Authorize Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signature__c</fullName>
        <description>Displays the available signatures of Customer Feedback personnels in Bangkok</description>
        <label>Authorize Signature</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Letter_Language__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Usanee Sangsingkeo</fullName>
                </value>
                <value>
                    <fullName>Teerapol Chotichanapibal</fullName>
                </value>
                <value>
                    <fullName>Priyasiri Juathes</fullName>
                </value>
                <value>
                    <fullName>Plearnpun Sirihongse</fullName>
                </value>
                <value>
                    <fullName>Anchalee Suthivanich</fullName>
                </value>
                <value>
                    <fullName>Papassara Thamasakjinda</fullName>
                </value>
                <value>
                    <fullName>Trajai Sriudommongkol</fullName>
                </value>
                <value>
                    <fullName>Chamaiporn Pholpoul</fullName>
                </value>
                <value>
                    <fullName>Thanasorn Phoonkabutr</fullName>
                </value>
                <value>
                    <fullName>Suksatit Meesook</fullName>
                </value>
                <value>
                    <fullName>Vicharn Jaroensuk</fullName>
                </value>
                <value>
                    <fullName>Lapasrada Rongyen</fullName>
                </value>
                <value>
                    <fullName>Kanokrut Tesakarn</fullName>
                </value>
                <value>
                    <fullName>Sasiwimol Skulyong</fullName>
                </value>
                <value>
                    <fullName>อุษณีย์ แสงสิงแก้ว</fullName>
                </value>
                <value>
                    <fullName>ธีรพล	โชติชนาภิบาล</fullName>
                </value>
                <value>
                    <fullName>ปรียาศิริ เชื้อเทศ</fullName>
                </value>
                <value>
                    <fullName>เพลินพันธ์ สิริหงส์</fullName>
                </value>
                <value>
                    <fullName>อัญชลี สุทธิวาณิชย์</fullName>
                </value>
                <value>
                    <fullName>ปภัสสรา ธรรมศักดิ์จินดา</fullName>
                </value>
                <value>
                    <fullName>ตราใจ ศรีอุดมมงคล</fullName>
                </value>
                <value>
                    <fullName>ชไมพร ผลพูล</fullName>
                </value>
                <value>
                    <fullName>ธนสร ปุณกะบุตร</fullName>
                </value>
                <value>
                    <fullName>สุขสถิตย์ มีสุข</fullName>
                </value>
                <value>
                    <fullName>วิชาญ เจริญสุข</fullName>
                </value>
                <value>
                    <fullName>ลภัสรดา รองเย็น</fullName>
                </value>
                <value>
                    <fullName>ธีรพล โชติชนาภิบาล</fullName>
                </value>
                <value>
                    <fullName>ศศิวิมล สกุลยง</fullName>
                </value>
                <value>
                    <fullName>กนกรัตน์ เทศกาล</fullName>
                </value>
                <value>
                    <fullName>Charamporn Jotikasthira</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorize_Signature_for_Email_En__c</fullName>
        <description>This field will automatically be defaulted to the user&apos;s first name and last name (in English) if the field Authorize Signature is not selected</description>
        <formula>IF( Text(Authorize_Signature__c) != null , Text(Authorize_Signature__c)  , Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorize Signature for Email EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signature_for_Email_TH__c</fullName>
        <description>This field will automatically be defaulted to the user&apos;s first name and last name (in Thai) if the field Authorize Signature is not selected</description>
        <formula>IF( Text(Authorize_Signature__c) != null , Text(Authorize_Signature__c)  , Owner:User.Name_TH__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorize Signature for Email TH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Seat_F__c</fullName>
        <description>Invalid</description>
        <formula>IF(CONTAINS(Flightid__r.Aircraft_Configuration__c, &apos;F&apos;), &apos;F&apos; &amp;
 IF((Flightid__r.Aircraft_Configuration_First_Class__c - Flightid__r.Booking_Passenger_First_Class__c) &lt; 0, (&apos;-&apos; &amp;
     LPAD(
     TEXT((Flightid__r.Aircraft_Configuration_First_Class__c - Flightid__r.Booking_Passenger_First_Class__c) * (-1)),
 2, &apos;0&apos;)),
     LPAD(
     TEXT(Flightid__r.Aircraft_Configuration_First_Class__c - Flightid__r.Booking_Passenger_First_Class__c),
 2, &apos;0&apos;)
    )
 , &apos;&apos;) &amp;
IF(CONTAINS(Flightid__r.Aircraft_Configuration__c, &apos;C&apos;), &apos; C&apos; &amp;
 IF((Flightid__r.Aircraft_Configuration_Business_Class__c - Flightid__r.Booking_Passenger_Business_Class__c) &lt; 0, (&apos;-&apos; &amp;
     LPAD(
     TEXT((Flightid__r.Aircraft_Configuration_Business_Class__c - Flightid__r.Booking_Passenger_Business_Class__c) * (-1)),
 2, &apos;0&apos;)),
     LPAD(
     TEXT(Flightid__r.Aircraft_Configuration_Business_Class__c - Flightid__r.Booking_Passenger_Business_Class__c),
 2, &apos;0&apos;)
    )
 , &apos;&apos;) &amp;
IF(CONTAINS(Flightid__r.Aircraft_Configuration__c, &apos;U&apos;), &apos; U&apos; &amp;
 IF((Flightid__r.Aircraft_Configuration_Premium_Economy__c - Flightid__r.Booking_Passenger_Premium_Economy_Class__c) &lt; 0, (&apos;-&apos; &amp;
     LPAD(
     TEXT((Flightid__r.Aircraft_Configuration_Premium_Economy__c - Flightid__r.Booking_Passenger_Premium_Economy_Class__c) * (-1)),
 2, &apos;0&apos;)),
     LPAD(
     TEXT(Flightid__r.Aircraft_Configuration_Premium_Economy__c - Flightid__r.Booking_Passenger_Premium_Economy_Class__c),
 2, &apos;0&apos;)
    )
 , &apos;&apos;) &amp;
IF(CONTAINS(Flightid__r.Aircraft_Configuration__c, &apos;Y&apos;), &apos; Y&apos; &amp;
 IF((Flightid__r.Aircraft_Configuration_Economy_Class__c - Flightid__r.Booking_Passenger_Economy_Class__c) &lt; 0, (&apos;-&apos; &amp;
     LPAD(
     TEXT((Flightid__r.Aircraft_Configuration_Economy_Class__c - Flightid__r.Booking_Passenger_Economy_Class__c) * (-1)),
 3, &apos;0&apos;)),
     LPAD(
     TEXT(Flightid__r.Aircraft_Configuration_Economy_Class__c - Flightid__r.Booking_Passenger_Economy_Class__c),
 3, &apos;0&apos;)
    )
 , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Seat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAY_ARR_DEP__c</fullName>
        <description>Displays the arrival and departure bays (in Suvarnabhumi) of flights</description>
        <label>BAY ARR/DEP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baggage_Check_Number__c</fullName>
        <description>Displays the baggage check number</description>
        <label>Baggage Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Name__c</fullName>
        <description>Displays the Block Name of the personnel indicated in the maintenance cases</description>
        <label>Block Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Case_Record_Count__c</fullName>
        <description>Displays the sum of all Maintenance Cases with Impact being Serviceable</description>
        <label>Blue Case Record Count</label>
        <summaryFilterItems>
            <field>Case_Group_Member__c.Impact__c</field>
            <operation>equals</operation>
            <value>Serviceable</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Booking_Class__c</fullName>
        <description>Displays the booking class of the Passenger that is related to the Case</description>
        <formula>Passengerid__r.Booking_Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Reference_txt__c</fullName>
        <label>Booking Reference txt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI__c</fullName>
        <description>Counts all the CTI records on the case</description>
        <label>CTI</label>
        <summaryForeignKey>CTI__c.Caseid__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cabin_Report_Ref_No__c</fullName>
        <description>Displays the reference number for Cabin Report</description>
        <label>Cabin Report Ref No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Accounted_For__c</fullName>
        <description>Checks whether the Case is concerned with KPI report for DT and the performance limiter</description>
        <formula>IF(Report_Lack_of_Part__c = FALSE &amp;&amp; Report_Lack_of_Time__c = TRUE &amp;&amp; TEXT(Status) &lt;&gt; &quot;Void&quot;, TRUE, FALSE )</formula>
        <label>Case Accounted For</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Number_Custom_F__c</fullName>
        <description>Displays the Case Number as a combination of Station Created by, Department and the automated Salesforce generated numbers</description>
        <formula>CreatedBy.Station__c &amp; CreatedBy.Department &amp; CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number_Custom__c</fullName>
        <description>Displays the Case Number as a combination of Station Created by, Department and the automated Salesforce generated numbers as a hyperlink</description>
        <formula>IF( $User.UIThemeDisplayed == &apos;Theme4t&apos;, HYPERLINK(&quot;/&quot; &amp; Id, CreatedBy.Station__c &amp; CreatedBy.Department &amp; CaseNumber, &quot;_self&quot; ), HYPERLINK(&quot;javascript:srcUp(&apos;/&quot; &amp; Id &amp; &quot;&apos;)&quot;, 

CreatedBy.Station__c &amp; CreatedBy.Department &amp; CaseNumber &amp; &quot; &quot; &amp; 

if( Text(Priority) == &quot;Urgent&quot;, 

IMAGE(&quot;/resource/icon_case/Priority_Exclamation.png&quot;,&quot;&quot;,13,13), 

&quot; &quot;)&amp; 

if(Text(Approval_Status__c) == &quot;Pending&quot;, 

IMAGE(&quot;/resource/icon_case/Icon_Lock.png&quot;,&quot;&quot;,15,15), 

&quot; &quot;) 

, &quot;_self&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number_Link_For_Console__c</fullName>
        <description>Displays the Case Number as a combination of Station Created by, Department and the automated Salesforce generated numbers as a hyperlink</description>
        <formula>HYPERLINK(&quot;javascript:openNewTab(&apos;&quot; &amp; Id &amp; &quot;&apos;)&quot;,if( Text(Priority) == &quot;Urgent&quot;,

CreatedBy.Station__c &amp; CreatedBy.Department &amp; CaseNumber &amp; &quot; &quot; &amp;   
IMAGE(&quot;/servlet/servlet.FileDownload?file=01528000003KdRV&quot;,&quot;&quot;,13,13), 

CreatedBy.Station__c &amp; CreatedBy.Department &amp; CaseNumber))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Changed_Time__c</fullName>
        <description>Displays the date and the time the case owner is changed</description>
        <label>Case Owner Changed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Reason_Text__c</fullName>
        <description>Displays reasons for voiding of cases</description>
        <label>Case Reason Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <description>Displays four colored circles where color is indicative of persisting cases with differing impacts</description>
        <formula>IF( Yellow_Case_Record_Count__c &gt; 0 , IMAGE(&quot;/resource/YellowCase&quot;,&quot;&quot;,20,20) + &apos; &apos;,IMAGE(&quot;/resource/WhiteCase&quot;,&quot;&quot;,20,20)+ &apos; &apos;)&amp;

IF( Red_Case_Record_Count__c &gt; 0 , IMAGE(&quot;/resource/RedCase&quot;,&quot;&quot;,20,20) + &apos; &apos;, IMAGE(&quot;/resource/WhiteCase&quot;,&quot;&quot;,20,20))&amp;

IF( Orange_Case_Record_Count__c &gt; 0 , IMAGE(&quot;/resource/OrangeCase&quot;,&quot;&quot;,20,20) + &apos; &apos;,IMAGE(&quot;/resource/WhiteCase&quot;,&quot;&quot;,20,20)+ &apos; &apos;)&amp;

IF( Blue_Case_Record_Count__c &gt; 0, IMAGE(&quot;/resource/BlueCase&quot;,&quot;&quot;,20,20) + &apos; &apos;,IMAGE(&quot;/resource/WhiteCase&quot;,&quot;&quot;,20,20)+ &apos; &apos;)</formula>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status_blue__c</fullName>
        <description>Used for display in M2</description>
        <formula>IMAGE(&quot;https://c.cs6.content.force.com/servlet/servlet.ImageServer?id=015N0000000W2pU&amp;oid=00DN0000000AfvZ&amp;lastMod=1475398279000&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>Displays the value of case type used in case management</description>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commendation</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Injury</fullName>
                </value>
                <value>
                    <fullName>Star Alliance</fullName>
                </value>
                <value>
                    <fullName>Baggage Claim</fullName>
                </value>
                <value>
                    <fullName>Court Case</fullName>
                </value>
                <value>
                    <fullName>14 CFR</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Arrival/Transit/Connections</fullName>
                </value>
                <value>
                    <fullName>Authorities and Airport Facilities</fullName>
                </value>
                <value>
                    <fullName>Boarding and Departure Area</fullName>
                </value>
                <value>
                    <fullName>Check-in and Service before immigration - SPECIAL MEAL</fullName>
                </value>
                <value>
                    <fullName>Check-in and Service before immigration - DGC</fullName>
                </value>
                <value>
                    <fullName>Check-in and Service before immigration - DBC</fullName>
                </value>
                <value>
                    <fullName>Check-in and Service before immigration - SEAT</fullName>
                </value>
                <value>
                    <fullName>Check-in &amp; Service pre-immigration-SPML</fullName>
                </value>
                <value>
                    <fullName>Check-in and Service before immigration - OTHER</fullName>
                </value>
                <value>
                    <fullName>General Comments on TG Services</fullName>
                </value>
                <value>
                    <fullName>Handling of flight Irregularities</fullName>
                </value>
                <value>
                    <fullName>Lounges</fullName>
                </value>
                <value>
                    <fullName>Unidentified</fullName>
                </value>
                <value>
                    <fullName>Baggage</fullName>
                </value>
                <value>
                    <fullName>Unruly</fullName>
                </value>
                <value>
                    <fullName>Junk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_created_within_3hrs_after_ATD__c</fullName>
        <formula>IF(
((CreatedDate - Flightid__r.ATD_LT_DateTime__c) * 1440) &lt;= 180,
TRUE,
FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case created within 3 hrs after ATD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CasebyTouchpoint__c</fullName>
        <formula>IF( 
CONTAINS( Created_by_Profile__c , &quot;CFMS&quot;), &quot;CUSTOMER FEEDBACK&quot;, 
IF( 
CONTAINS( Created_by_Profile__c , &quot;Ground&quot;), &quot;GROUND SERVICE&quot;, 
IF( 
CONTAINS( Created_by_Profile__c , &quot;DT&quot;), &quot;AIRCRAFT MAINTENANCE&quot;, 
IF( 
CONTAINS( Created_by_Profile__c , &quot;Purser&quot;), &quot;IN-FLIGHT&quot;, 
IF( 
CONTAINS( Created_by_Profile__c , &quot;PT1&quot;), &quot;EMAIL-TO-CASE&quot;, &quot;OTHER&quot; 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case by Touchpoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_CTI__c</fullName>
        <description>Category is a touchpoint fom investigation result (Manual input by SZ-R)</description>
        <label>Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Cabin_Class_Full_Name__c</fullName>
        <description>Displays the value of the new cabin class (full name) of the passenger related to the case</description>
        <formula>CASE( Change_Cabin_Class__c , &quot;F&quot;, &quot;First&quot;, &quot;C&quot;, &quot;Business&quot;, &quot;Y&quot;, &quot;Economy&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Cabin Class Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Cabin_Class__c</fullName>
        <description>Displays value of the new cabin class (code) of the passenger related to the case</description>
        <label>Change Cabin Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Seat__c</fullName>
        <description>Displays the value of the new seat of the passenger related to the case</description>
        <label>Change Seat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>INVALID</description>
        <label>Channel (Delete)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Walk-in</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>In-flight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Time__c</fullName>
        <description>Displays the date and time when the case was closed</description>
        <label>Closed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_by_Role__c</fullName>
        <description>Displays the role of the user who closed the case</description>
        <label>Closed by (Role)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_by__c</fullName>
        <description>Displays the user who closed the case</description>
        <label>Closed by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_txt__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compensation_Amount__c</fullName>
        <description>Sums up the compensation amount</description>
        <label>Compensation Amount</label>
        <summaryFilterItems>
            <field>Compensation__c.Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>Compensation__c.CaseId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Compensation_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays whether the compensation is approved</description>
        <label>Compensation Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compensation_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the user who has approved the case</description>
        <label>Compensation Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compensation_Count__c</fullName>
        <description>Counts the number of compensation on the case</description>
        <label>Compensation Count</label>
        <summaryForeignKey>Compensation__c.CaseId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Compensation_List__c</fullName>
        <description>Displays all the compensations in the case in a list</description>
        <label>Compensation List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>